# aaudio_demo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xiaomi/aaudiodemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  demo_record_callback.cpp
app/src/main/cpp/util/: AAudioArgsParser.h  AAudioExampleUtils.h  error.h
app/src/main/java/com/xiaomi/aaudiodemo/: MainActivity.kt  PermissionActivity.kt  TestJni.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xiaomi/aaudiodemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
